fix: public url
